5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1671_1107.log
== TEST (2019-04-29 11:55:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
y = int(input("B:"))
if((x<6)or(x>0)):
	print("A entrada ", x," eh invalida")
elif(x == 0):
	n = ("domingo")
elif(x == 1):
	n = ("segunda")
elif(x==2):
	n = ("terca")
elif(x==3):
	n = ("quarta")
elif(x==4):
	n = ("quinta")
elif(x == 5):
	n = ("sexta")
else:
	n = ("sabado")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:56:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
y = int(input("B:"))
if((x>6)or(x<0)):
	print("A entrada ", x," eh invalida")
elif(x == 0):
	n = ("domingo")
elif(x == 1):
	n = ("segunda")
elif(x==2):
	n = ("terca")
elif(x==3):
	n = ("quarta")
elif(x==4):
	n = ("quinta")
elif(x == 5):
	n = ("sexta")
else:
	n = ("sabado")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:36:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
if((x>=0)and(x<=6)):
	j = int(input("Quantos dias? "))
	d1 = (x+j)%7
   if(x == 0):
		n = ("domingo")
   elif(x == 1):
		n = ("segunda")
   elif(x==2):
		n = ("terca") 
	elif(x==3):
	   n = ("quarta")
   elif(x==4):
	   n = ("quinta")
   elif(x == 5):
	   n = ("sexta")
   else:
		n = ("sabado")
	if(d1 == 0):
		d1 = ("domingo")
   elif(d1 == 1):
		d1 = ("segunda")
   elif(d1==2):
		d1 = ("terca") 
	elif(d1==3):
	   d1 = ("quarta")
   elif(d1==4):
	   d1 = ("quinta")
   elif(d1 == 5):
	   d1 = ("sexta")
   else:
		d1 = ("sabado")
	print("Hoje eh", n "e o dia futuro eh", d1)
else:
	print("A entrada", d, "eh invalida")
-- ERROR:
File "XXXX", line 8
    if(x == 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
if((x>=0)and(x<=6)):
	j = int(input("Quantos dias? "))
	d1 = (x+j)%7
   if(x == 0):
		n = ("domingo")
   elif(x == 1):
		n = ("segunda")
   elif(x==2):
		n = ("terca") 
	elif(x==3):
	   n = ("quarta")
   elif(x==4):
	   n = ("quinta")
   elif(x == 5):
	   n = ("sexta")
   else:
		n = ("sabado")
	if(d1 == 0):
		d1 = ("domingo")
   elif(d1 == 1):
		d1 = ("segunda")
   elif(d1==2):
		d1 = ("terca") 
	elif(d1==3):
	   d1 = ("quarta")
   elif(d1==4):
	   d1 = ("quinta")
   elif(d1 == 5):
	   d1 = ("sexta")
   else:
		d1 = ("sabado")
	print("Hoje eh", n "e o dia futuro eh", d1)
else:
	print("A entrada", d, "eh invalida")
-- ERROR:
File "XXXX", line 8
    if(x == 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:09:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
if((x>=0)and(x<=6)):
	j = int(input("Quantos dias? "))
	d1 = (x+j)%7
   if(x == 0):
		n = ("domingo")
   elif(x == 1):
		n = ("segunda")
   elif(x==2):
		n = ("terca") 
	elif(x==3):
	   n = ("quarta")
   elif(x==4):
	   n = ("quinta")
   elif(x == 5):
	   n = ("sexta")
   else:
		n = ("sabado")
	if(d1 == 0):
		d1 = ("domingo")
   elif(d1 == 1):
		d1 = ("segunda")
   elif(d1==2):
		d1 = ("terca") 
	elif(d1==3):
	   d1 = ("quarta")
   elif(d1==4):
	   d1 = ("quinta")
   elif(d1 == 5):
	   d1 = ("sexta")
   else:
		d1 = ("sabado")
	print("Hoje eh", n "e o dia futuro eh", d1)
else:
	print("A entrada", d, "eh invalida")
-- ERROR:
File "XXXX", line 8
    if(x == 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:09:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
if((x>=0)and(x<=6)):
	j = int(input("Quantos dias? "))
	d1 = (x+j)%7
   if(x == 0):
		n = ("domingo")
   elif(x == 1):
		n = ("segunda")
   elif(x==2):
		n = ("terca") 
	elif(x==3):
	   n = ("quarta")
   elif(x==4):
	   n = ("quinta")
   elif(x == 5):
	   n = ("sexta")
   else:
		n = ("sabado")
	if(d1 == 0):
		d1 = ("domingo")
   elif(d1 == 1):
		d1 = ("segunda")
   elif(d1==2):
		d1 = ("terca") 
	elif(d1==3):
	   d1 = ("quarta")
   elif(d1==4):
	   d1 = ("quinta")
   elif(d1 == 5):
	   d1 = ("sexta")
   else:
		d1 = ("sabado")
	print("Hoje eh", n "e o dia futuro eh", d1)
else:
	print("A entrada", d, "eh invalida")
-- ERROR:
File "XXXX", line 8
    if(x == 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:09:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
if((x>=0)and(x<=6)):
	j = int(input("Quantos dias? "))
	d1 = (x+j)%7
   if(x == 0):
		n = ("domingo")
   elif(x == 1):
		n = ("segunda")
   elif(x==2):
		n = ("terca") 
	elif(x==3):
	   n = ("quarta")
   elif(x==4):
	   n = ("quinta")
   elif(x == 5):
	   n = ("sexta")
   else:
		n = ("sabado")
	if(d1 == 0):
		d1 = ("domingo")
   elif(d1 == 1):
		d1 = ("segunda")
   elif(d1==2):
		d1 = ("terca") 
	elif(d1==3):
	   d1 = ("quarta")
   elif(d1==4):
	   d1 = ("quinta")
   elif(d1 == 5):
	   d1 = ("sexta")
   else:
		d1 = ("sabado")
	print("Hoje eh", n "e o dia futuro eh", d1)
else:
	print("A entrada", d, "eh invalida")
-- ERROR:
File "XXXX", line 8
    if(x == 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:09:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
if((x>=0)and(x<=6)):
	j = int(input("Quantos dias? "))
	d1 = (x+j)%7
   if(x == 0):
		n = ("domingo")
   elif(x == 1):
		n = ("segunda")
   elif(x==2):
		n = ("terca") 
	elif(x==3):
	   n = ("quarta")
   elif(x==4):
	   n = ("quinta")
   elif(x == 5):
	   n = ("sexta")
   else:
		n = ("sabado")
	if(d1 == 0):
		d1 = ("domingo")
   elif(d1 == 1):
		d1 = ("segunda")
   elif(d1==2):
		d1 = ("terca") 
	elif(d1==3):
	   d1 = ("quarta")
   elif(d1==4):
	   d1 = ("quinta")
   elif(d1 == 5):
	   d1 = ("sexta")
   else:
		d1 = ("sabado")
	print("Hoje eh", n "e o dia futuro eh", d1)
else:
	print("A entrada", d, "eh invalida")
-- ERROR:
File "XXXX", line 8
    if(x == 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
j = int(input("Quantos dias? "))
if((x>=0)and(x<=6)):
	j = int(input("Quantos dias? "))
	d1 = (x+j)%7
	if(x==0):
		y= "domingo"
	elif(x==1):
		y= "segunda"
	elif(x==2):
		y= "terca"
	elif(x==3):
		y= "quarta"
	elif(x==4):
		y= "quinta"
	elif(x==5):
		y= "sexta"
	else:
		y= "sabado"
	if(d1==0):
		z= "domingo"
	elif(d1==1):
		z= "segunda"
	elif(d1==2):
		z= "terca"
	elif(d1==3):
		z= "quarta"
	elif(d1==4):
		z= "quinta"
	elif(d1==5):
		z= "sexta"
	else:
		z= "sabado"
	print("Hoje eh",y,"e o dia futuro eh",z)
else:
	print("A entrada",x,"eh invalida")
   
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
j = int(input("Quantos dias? "))
if((x>=0)and(x<=6)):
	d1 = (x+j)%7
	if(x==0):
		y= "domingo"
	elif(x==1):
		y= "segunda"
	elif(x==2):
		y= "terca"
	elif(x==3):
		y= "quarta"
	elif(x==4):
		y= "quinta"
	elif(x==5):
		y= "sexta"
	else:
		y= "sabado"
	if(d1==0):
		z= "domingo"
	elif(d1==1):
		z= "segunda"
	elif(d1==2):
		z= "terca"
	elif(d1==3):
		z= "quarta"
	elif(d1==4):
		z= "quinta"
	elif(d1==5):
		z= "sexta"
	else:
		z= "sabado"
	print("Hoje eh",y,"e o dia futuro eh",z)
else:
	print("A entrada",x,"eh invalida")
   
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:29:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("n:"))
j = int(input("Quantos dias? "))
if((x>=0)and(x<=6)):
	d1 = (x+j)%7
	if(x==0):
		y= "domingo"
	elif(x==1):
		y= "segunda"
	elif(x==2):
		y= "terca"
	elif(x==3):
		y= "quarta"
	elif(x==4):
		y= "quinta"
	elif(x==5):
		y= "sexta"
	else:
		y= "sabado"
	if(d1==0):
		z= "domingo"
	elif(d1==1):
		z= "segunda"
	elif(d1==2):
		z= "terca"
	elif(d1==3):
		z= "quarta"
	elif(d1==4):
		z= "quinta"
	elif(d1==5):
		z= "sexta"
	else:
		z= "sabado"
	print("Hoje eh",y,"e o dia futuro eh",z)
else:
	print("A entrada",x,"eh invalida")
   
-- EXECUTION TIME:
0.155792
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
